# rag-eval-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: base.yaml
config/variants/: closed_book.yaml  dense_only.yaml  hybrid.yaml  hybrid_rerank.yaml  oracle.yaml
data/sample/: corpus.jsonl
docs/: DECISIONS.md  PROJECT_PLAN.md
eval/: judge_labels.jsonl  regression_thresholds.json
eval/gold/: dev.jsonl  test.jsonl
eval/results/: ablation.md  closed_book.json  dense_only.json  hybrid.json  hybrid_rerank.json  oracle.json
scripts/: check_regression.py
src/rag_eval/: __init__.py  cli.py  config.py  pipeline.py  text.py  types.py
src/rag_eval/api/: __init__.py  app.py
src/rag_eval/eval/: __init__.py  gold.py  judge.py  metrics.py  plots.py  regression.py  results.py  runner.py  stats.py  validate.py
src/rag_eval/generate/: __init__.py  citations.py  llm.py  prompt.py
src/rag_eval/ingest/: __init__.py  chunking.py  indexer.py  loaders.py
src/rag_eval/retrieve/: __init__.py  bm25.py  dense.py  embedder.py  fusion.py  rerank.py  retrievers.py
tests/: conftest.py  test_api.py  test_chunking.py  test_config.py  test_embedder.py  test_fusion.py  test_generation.py  test_gold.py  test_indexes.py  test_judge.py  test_metrics.py  test_packaging.py  test_pipeline.py  test_regression.py  test_rerank.py  test_results_io.py  test_retrieval.py  test_runner.py  test_stats.py  test_validate.py
